Mensagem de commmit

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
-Maria Eloisa Costa Silva - 3° Info B
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Menu Principal</title>
+</head>
+<body>
+  <h2>Maria Eloisa Costa Silva</h2>
 
-<h3> Menu </h3>
-<ul>
-  <li><a href="estagio.html">Relatório de Estágio</a></li>
-  <li><a href="experiencias.html">Experiência</a></li>
-  <li><a href="aspiracoes.html">Aspirações</a></li>
-</ul>
+  <h3>Menu</h3>
+  <ul>
+    <li><a href="estagio.html">Relatório de Estágio</a></li>
+    <li><a href="experiencias.html">Experiência</a></li>
+    <li><a href="aspiracoes.html">Aspirações</a></li>
+  </ul>
+</body>
+</html>
