Mensagem de commmit

--- a/estagio.html
+++ b/estagio.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-	  <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title> Att 5 </title>
-		<link rel="stylesheet" href="css/estilo.css">
-  </head>
-  <body>
-    <h1> Relatório de Estágio</h1>
-    <p>____Texto_em_homenagem_para_a_pessoa_especial</p>
-		
-  </body>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Relatório de Estágio</title>
+</head>
+<body>
+  <h1>Relatório de Estágio</h1>
+
+  <h2>1. Introdução</h2>
+
+  <h3>1.1. Objetivos</h3>
+
+  <h4>1.1.1. Objetivo Geral</h4>
+  <p>O objetivo geral deste estágio foi aplicar os conhecimentos adquiridos durante o curso em um ambiente real de trabalho.</p>
+
+  <h4>1.1.2. Objetivos Específicos</h4>
+  <p>Aprender práticas de desenvolvimento web, colaborar em equipe e entender os processos de software em uma empresa.</p>
+
+  <h2>2. Atividades realizadas</h2>
+
+  <h3>2.1. Desenvolvimento de um site institucional</h3>
+  <p>Desenvolvimento de páginas HTML e CSS para o site de uma empresa local.</p>
+
+  <h3>2.2. Suporte ao time de TI</h3>
+  <p>Auxílio na manutenção de computadores e atendimento de chamados técnicos.</p>
+
+  <h2>3. Conclusão</h2>
+  <p>O estágio foi essencial para o meu crescimento profissional, oferecendo uma visão real do mercado de trabalho.</p>
+</body>
 </html>
