--- a/estagio.html
+++ b/estagio.html
@@ -8,6 +8,7 @@
   <h1>Relatório de Estágio</h1>
 
   <h2>1. Introdução</h2>
+<p> Realizei o meu estágio na L&G Informática, junto com alguns colegas de sala, o estágio é uma das coisas que ajuda colocar os estudos em prática</p>
 
   <h3>1.1. Objetivos</h3>
 
@@ -15,17 +16,17 @@
   <p>O objetivo geral deste estágio foi aplicar os conhecimentos adquiridos durante o curso em um ambiente real de trabalho.</p>
 
   <h4>1.1.2. Objetivos Específicos</h4>
-  <p>Aprender práticas de desenvolvimento web, colaborar em equipe e entender os processos de software em uma empresa.</p>
+  <p>Ajudar as pessoas com Word, Excel, Power Point e exercícios de internet. </p>
 
   <h2>2. Atividades realizadas</h2>
 
-  <h3>2.1. Desenvolvimento de um site institucional</h3>
-  <p>Desenvolvimento de páginas HTML e CSS para o site de uma empresa local.</p>
+  <h3>2.1. Desenvolvimento de atividades </h3>
+  <p>Desenvolvimento de atividade e provas.</p>
 
-  <h3>2.2. Suporte ao time de TI</h3>
-  <p>Auxílio na manutenção de computadores e atendimento de chamados técnicos.</p>
+  <h3>2.2. Suporte ao pessoal</h3>
+  <p>Auxílio na realização de atividades e provas.</p>
 
   <h2>3. Conclusão</h2>
-  <p>O estágio foi essencial para o meu crescimento profissional, oferecendo uma visão real do mercado de trabalho.</p>
+  <p>O estágio foi essencial para o meu crescimento profissional.</p>
 </body>
 </html>
